[package]
name = "integritee_cli_py"
version = "0.0.1"
edition = "2018"

[dependencies]
pyo3 = { version = "0.15", features = ["extension-module"] }
integritee-cli = { path = "../worker/cli" }
clap = {}
# FIX: force correct features for this dep
sgx_crypto_helper = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["crypto_direct"] }

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
# TODO ideally we would directly use this patched version from `integritee-cli`
# but it is quite a mess to make it work both from repo `integritee-worker` and here
sgx_crypto_helper = { version = "1.1.6", path = "../incubator-teaclave-sgx-sdk/sgx_crypto_helper/" }

[build-dependencies]
maturin = "0.12"
