[package]
name = "integritee_cli_py"
version = "0.1.0"
edition = "2018"

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
integritee-cli = { path = "./shared/BEST-Energy/cli" }
# if `Cli::Parse` should be used, the major version needs to match the
# BEST-Energy workers CLI otherwise it can't match the traits.
clap = { version = "3.1.6" }
# FIX: force correct features for this dep
sgx_crypto_helper = { branch = "master", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["crypto_direct"] }

[build-dependencies]
maturin = "0.12"

[patch."https://github.com/apache/teaclave-sgx-sdk.git"]
# TODO ideally we would directly use this patched version from `integritee-cli`
# but it is quite a mess to make it work both from repo `integritee-worker` and here
sgx_crypto_helper = { version = "1.1.6", path = "./shared/incubator-teaclave-sgx-sdk/sgx_crypto_helper/" }

# Needed because cargo can't handle when features are unavailable on the latest commit in a branch.
# Remove when https://github.com/integritee-network/worker/issues/1388 is resolved.
[patch."https://github.com/paritytech/frame-metadata.git"]
frame-metadata = { version = "=15.1.0" }
